--- a/css/media_query.css
+++ b/css/media_query.css
@@ -2,8 +2,11 @@
     .login_btn{
         width: 7rem;
     }
-    .header_sec{
-        padding-right:0;
+
+}
+@media only screen and (max-width:967px){
+    .login_btn{
+        display: none;
     }
 }
 
