--- a/css/media_query.css
+++ b/css/media_query.css
@@ -6,7 +6,9 @@
         width: 9.5VW;
         height: 2.965rem;
     }
-
+    .swipe_text{
+        font-size: 1.4rem;
+    }
 
 }
 @media only screen and (max-width:967px){
