--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,8 @@
 }
 
 .login_btn{
-    width: 9.25rem;
-    /* width:7.7083vw; */
+    /* width: 9.25rem; */
+    width:7.7083vw;
     height: 3.25rem;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     box-shadow: 0px 3px 6px #FFFFFF83;
