--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
 
 }
 
-
 @font-face{
     src: url(../font/product-sans/Product\ Sans\ Bold.ttf);
     font-family: product-sans-bold;
@@ -46,7 +45,7 @@
     cursor: pointer;
 }
 .nabar_banner_sec{
-    background: url('../images/beautiful-clouds-couple-date-340566.png') no-repeat bottom center/cover;
+    background: url('../images/beautiful-clouds-couple-date-340566.png') no-repeat bottom center/cover fixed;
 }
 .swipe_life_sec{
     background: transparent linear-gradient(92deg, #FC6750 0%, #E73B52 100%) 0% 0% no-repeat padding-box;
